[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acms"
version = "0.1.0"
description = "Algorithmic Crypto Management System"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=0.20",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "lightgbm>=4.2",
    "torch>=2.2",
    "stable-baselines3>=2.3",
    "optuna>=3.5",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "websockets>=12.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "cryptography>=42.0",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "aiohttp>=3.9",
    "ccxt>=4.2",
    "vectorbt>=0.26",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "pyarrow>=15.0",
    "confluent-kafka>=2.3",
    "loguru>=0.7",
    "rich>=13.7",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.2",
    "black>=24.1",
    "ipython>=8.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
