[workspace]
members = ["."]

[package]
name = "acms-core"
version = "0.1.0"
edition = "2021"
description = "ACMS Rust Core - High-performance data ingestion, execution engine, risk hot-path"

[lib]
name = "acms_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
pyo3_bridge = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py38"], optional = true }
arrow = "53"
parquet = "53"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-util = "0.7"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "6"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1"
tokio-test = "0.4"
tempfile = "3"

[[bench]]
name = "orderbook_bench"
harness = false

[[bench]]
name = "risk_check_bench"
harness = false
